--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@
     --scrollbar-color: rgba(0, 0, 0, 0.25);
 
     --nav-color: #ffffffA5;
-    --nav-bg-color: #fff;
 
     --settings-shadow: 0 0 1rem #0f0f0f;
 
@@ -42,7 +41,6 @@
     --scrollbar-color: rgba(255, 255, 255, 0.25);
 
     --nav-color: rgba(0, 0, 0, 0.6);
-    --nav-bg-color: rgba(0, 0, 0, 0);
 
     --settings-shadow: 0 0 1rem #e9e9e986;
 
@@ -146,15 +144,6 @@ body {
 
 .navText {
     padding: 15px 15px 30px 30px;
-}
-
-.navBG {
-    position: absolute;
-    top: 0;
-    height: 50px;
-    width: 100%;
-    display: block;
-    background-color: var(--nav-bg-color);
 }
 
 #settingsBox {
@@ -305,7 +294,7 @@ body {
     overflow-y: scroll;
 
     --mask: linear-gradient(to bottom,
-            rgba(0, 0, 0, 1) 0, rgba(0, 0, 0, 1) 90%,
+            rgba(0, 0, 0, 1) 0, rgba(0, 0, 0, 1) 95%,
             rgba(0, 0, 0, 0) 100%, rgba(0, 0, 0, 0) 0) 100%;
     -webkit-mask: var(--mask);
     mask: var(--mask);
@@ -324,10 +313,6 @@ body {
 
     .mainVideo {
         border-radius: 0;
-    }
-
-    .navigationBar {
-        background-color: var(--nav-bg-color);
     }
 
     .videoArea {
@@ -457,12 +442,10 @@ video {
 
 @media screen and (max-width: 950px) {
     .ambientWrapper {
-        width: 100vw;
+        width: 100%;
         height: 65vw;
-        top: 10vh;
-        left: 50vw;
-        transform: translateX(-50%) scale(2);
-        overflow: hidden;
+        top: 0;
+        transform: scale(1.5, 5);
     }
 
     .ambientWrapper::after {
@@ -470,7 +453,7 @@ video {
     }
 
     .ambientCanvas {
-        width: 100vw;
+        width: 100%;
         height: 65vw;
     }
 }
