--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ body {
     max-width: var(--maxwidth);
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 /*nav*/
@@ -260,13 +261,15 @@ body {
 }
 
 .videoArea {
-    max-width: 75%;
+    max-width: 70%;
     overflow: hidden;
 }
 
 .sideBar {
     min-width: 250px;
-    height: 40vw;
+    width: 100%;
+    max-width: calc(100px + 15vw);
+    /* height: 40vw; */
     max-height: 75vh;
     padding-left: 1em;
     overflow-y: scroll;
